--- a/VHDLGenerator/Views/Window_Signal.xaml
+++ b/VHDLGenerator/Views/Window_Signal.xaml
@@ -43,7 +43,7 @@
             </Grid>
 
             <Grid Grid.Row="1" Grid.Column="1">
-                <CheckBox HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="60,5"/>
+                <CheckBox Name ="Bus_CB" HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="60,5" Checked="Bus_CB_Checked" Unchecked="Bus_CB_Unchecked"/>
             </Grid>
 
             <!---->
@@ -52,7 +52,7 @@
             </Grid>
 
             <Grid Grid.Column="1" Grid.Row="2">
-                <TextBox Grid.Row="0" Grid.Column="2" Margin="60,15,250,15" Background="WhiteSmoke"/>
+                <TextBox Name ="MSB_TB" Grid.Row="0" Grid.Column="2" Margin="60,15,250,15" Background="WhiteSmoke" PreviewTextInput="MSB_TB_PreviewTextInput"/>
             </Grid>
 
             <!---->
@@ -61,7 +61,7 @@
             </Grid>
 
             <Grid Grid.Row="3" Grid.Column="1">
-                <TextBox  Grid.Row="0" Grid.Column="2" Margin="60,15,250,15" Background="WhiteSmoke"/>
+                <TextBox Name="LSB_TB" Grid.Row="0" Grid.Column="2" Margin="60,15,250,15" Background="WhiteSmoke" PreviewTextInput="LSB_TB_PreviewTextInput"/>
             </Grid>
 
         </Grid>
@@ -89,7 +89,7 @@
             </Grid>
 
             <Grid Grid.Row="1" Grid.Column="1">
-                <ComboBox Height="25"  Margin="20,5"/>
+                <ComboBox Name="CompS_CB" Height="25"  Margin="20,5"/>
             </Grid>
 
             <Grid Grid.Row="2" Grid.Column="0">
@@ -97,7 +97,7 @@
             </Grid>
 
             <Grid Grid.Row="2" Grid.Column="1">
-                <ComboBox Height="25" Margin="20,5"/>
+                <ComboBox Name="PortS_CB" Height="25" Margin="20,5"/>
             </Grid>
             
             
@@ -111,7 +111,7 @@
             </Grid>
 
             <Grid Grid.Row="1" Grid.Column="3">
-                <ComboBox Height="25"  Margin="20,5"/>
+                <ComboBox Name="CompD_CB" Height="25"  Margin="20,5"/>
             </Grid>
 
             <Grid Grid.Row="2" Grid.Column="2">
@@ -119,7 +119,7 @@
             </Grid>
 
             <Grid Grid.Row="2" Grid.Column="3">
-                <ComboBox Height="25"  Margin="20,5"/>
+                <ComboBox Name="PortD_CB" Height="25"  Margin="20,5"/>
             </Grid>
 
         </Grid>
