--- a/VHDLGenerator/Views/Window_Component.xaml
+++ b/VHDLGenerator/Views/Window_Component.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="VHDLGenerator.Views.Window_Component"
+﻿   <Window x:Class="VHDLGenerator.Views.Window_Component"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -57,6 +57,7 @@
                 Grid.Column="2"
                 Margin="60,15,250,15"
                 Background="WhiteSmoke"
+                Text="{Binding ElementName=EntityNameTB}"
             />
 
             <TextBox
@@ -97,6 +98,7 @@
                        Name="PortName_TB"
                        Width="200"
                        Margin="30,5"
+                       Text="{Binding PortNameTxt}"
                     />
                 </StackPanel>
 
