--- a/VHDLGenerator/Views/Window_Component.xaml
+++ b/VHDLGenerator/Views/Window_Component.xaml
@@ -57,7 +57,7 @@
                 Grid.Column="2"
                 Margin="60,15,250,15"
                 Background="WhiteSmoke"
-                Text="{Binding ElementName=EntityNameTB}"
+                Text="{Binding Path=EntityNameTxt}"
             />
 
             <TextBox
@@ -66,7 +66,7 @@
                 Grid.Column="2"
                 Margin="60,15,250,15"
                 Background="WhiteSmoke"
-                Text="Behavioral"
+                Text="{Binding Path=ArchNameTxt}"
             />
 
         </Grid>
@@ -98,7 +98,7 @@
                        Name="PortName_TB"
                        Width="200"
                        Margin="30,5"
-                       Text="{Binding PortNameTxt}"
+                       Text="{Binding Path=PortNameTxt}"
                     />
                 </StackPanel>
 
@@ -109,10 +109,10 @@
                         Width="150"
                         HorizontalContentAlignment="Right"
                     />
-                    <ComboBox Name="Direction_CB" Width="100" Margin="30,5">
-                        <ComboBoxItem Content="in"/>
-                        <ComboBoxItem Content="out"/>
-                        <ComboBoxItem Content="inout"/>
+                    <ComboBox Name="Direction_CB" Width="100" Margin="30,5" 
+                              ItemsSource="{Binding Path=GetDirections}" 
+                              SelectedValue="{Binding Path=DirectionSel}">
+                        
                     </ComboBox>
                 </StackPanel>
 
@@ -126,6 +126,7 @@
                     <CheckBox
                         Name="Bus_CB" 
                         Margin="30,5"
+                        IsChecked="{Binding Path=BusSel}"
                     />
                 </StackPanel>
 
@@ -140,6 +141,7 @@
                        Name="MSB_TB"
                        Width="55"
                        Margin="30,5"
+                       Text="{Binding Path=MsbTxt, Mode=TwoWay}"
                     />
                 </StackPanel>
 
@@ -154,6 +156,7 @@
                        Name="LSB_TB"
                        Width="55"
                        Margin="30,5"
+                        Text="{Binding Path=LsbTxt, Mode=TwoWay}"
                     />
                 </StackPanel>
 
@@ -178,7 +181,6 @@
 
                 <!-- Column Header text and Binding-->
                 <DataGrid.Columns>
-                    <DataGridTextColumn Header="Port ID" Width="100" Binding="{Binding ID}"/>
                     <DataGridTextColumn Header="Port Name" Width="100" Binding="{Binding Name}"/>
                     <DataGridTextColumn Header="Direction" Width="100" Binding="{Binding Direction}"/>
                     <DataGridTextColumn Header="Bus" Width="100" Binding="{Binding Bus}"/>
