--- a/VHDLGenerator/Views/Window_Datapath.xaml
+++ b/VHDLGenerator/Views/Window_Datapath.xaml
@@ -177,16 +177,22 @@
            
                 
         <!-- DataGrid to display the port data -->
-            <DataGrid Name="PortDataGrid" HorizontalAlignment="Center" VerticalAlignment="Top" Height="175">
-
-                <!-- Column Header text and Binding-->
+            <DataGrid Name="PortDataGrid" HorizontalAlignment="Center" 
+                      VerticalAlignment="Top" Height="175" Width="405"
+                     
+                      >
                 <DataGrid.Columns>
-                    <DataGridTextColumn Header="Port Name" Width="100" Binding="{Binding Name}"/>
+                    <DataGridTextColumn Header="Port Name" IsReadOnly="True" Width="100" Binding="{Binding Name}"/>
                     <DataGridTextColumn Header="Direction" Width="100" Binding="{Binding Direction}"/>
-                    <DataGridTextColumn Header="Bus" Width="100" Binding="{Binding Bus}"/>
+                    <DataGridCheckBoxColumn Header="Bus" Width="100" Binding="{Binding Bus}"/>
                     <DataGridTextColumn Header="MSB" Width="50" Binding="{Binding MSB}"/>
                     <DataGridTextColumn Header="LSB" Width="50" Binding="{Binding LSB}"/>
                 </DataGrid.Columns>
+
+                <!-- Column Header text and Binding-->
+               
+               
+               
             </DataGrid>
 
         </Grid>
