Made all classes public and added T4 file and it's code into template folder - Simple Generation works

--- a/VHDLGenerator/Templates/DataPathTemplate.tt
+++ b/VHDLGenerator/Templates/DataPathTemplate.tt
@@ -3,3 +3,7 @@
 <#@ import namespace="System.Linq" #>
 <#@ import namespace="System.Text" #>
 <#@ import namespace="System.Collections.Generic" #>
+Datapath Name : "<#= Name #>"
+Datapath ArchName : "<#= ArchName #>"
+
+library IEEE;
