--- a/VHDLGenerator/Views/Window_Signal.xaml
+++ b/VHDLGenerator/Views/Window_Signal.xaml
@@ -9,68 +9,14 @@
     <Grid>
 
         <Grid.RowDefinitions>
-            <RowDefinition Height="4*"/>
             <RowDefinition Height="3*"/>
+            <RowDefinition Height="4*"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
+        
+
         <Grid Grid.Row="0">
-
-            <Grid.RowDefinitions>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="*"/>
-            </Grid.RowDefinitions>
-
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="2*"/>
-                <ColumnDefinition Width="3*"/>
-            </Grid.ColumnDefinitions>
-            
-            <!---->
-            <Grid Grid.Row="0" Grid.Column="0">
-                <Label Content="Signal Name" HorizontalAlignment="Right" VerticalAlignment="Center"/>
-            </Grid>
-
-            <Grid Grid.Row="0" Grid.Column="1">
-                <TextBox Name="EntityNameTB" Grid.Row="0" Grid.Column="2" Margin="60,15,250,15" Background="WhiteSmoke"
-                         Text="{Binding Path=SigEntityNameTxt}"/>
-            </Grid>
-            
-            <!---->
-            <Grid Grid.Row="1" Grid.Column="0">
-                <Label Content="Bus" HorizontalAlignment="Right" VerticalAlignment="Center"/>
-            </Grid>
-
-            <Grid Grid.Row="1" Grid.Column="1">
-                <CheckBox Name ="Bus_CB" HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="60,5" Checked="Bus_CB_Checked" Unchecked="Bus_CB_Unchecked"
-                          IsChecked="{Binding Path=SigBusCB}"/>
-            </Grid>
-
-            <!---->
-            <Grid Grid.Row="2" Grid.Column="0">
-                <Label Content="MSB" HorizontalAlignment="Right" VerticalAlignment="Center"/>
-            </Grid>
-
-            <Grid Grid.Column="1" Grid.Row="2">
-                <TextBox Name ="MSB_TB" Grid.Row="0" Grid.Column="2" Margin="60,15,250,15" Background="WhiteSmoke" PreviewTextInput="MSB_TB_PreviewTextInput"
-                         Text="{Binding Path=MsbTxt}"/>
-            </Grid>
-
-            <!---->
-            <Grid Grid.Row="3" Grid.Column="0">
-                <Label Content="LSB" HorizontalAlignment="Right" VerticalAlignment="Center"/>
-            </Grid>
-
-            <Grid Grid.Row="3" Grid.Column="1">
-                <TextBox Name="LSB_TB" Grid.Row="0" Grid.Column="2" Margin="60,15,250,15" Background="WhiteSmoke" PreviewTextInput="LSB_TB_PreviewTextInput"
-                         Text="{Binding Path=LsbTxt}"/>
-            </Grid>
-
-        </Grid>
-
-        <Grid Grid.Row="1">
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="*"/>
@@ -134,6 +80,64 @@
                 <ComboBox Name="PortD_CB" Height="25"  Margin="20,5"
                           ItemsSource="{Binding Path=TCompPorts}"
                           SelectedValue="{Binding Path=TCompPortName}"/>
+            </Grid>
+
+        </Grid>
+
+        <Grid Grid.Row="1" IsEnabled="{Binding Path=GridEnable}">
+
+           
+
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="2*"/>
+                <ColumnDefinition Width="3*"/>
+            </Grid.ColumnDefinitions>
+
+            <!---->
+            <Grid Grid.Row="0" Grid.Column="0">
+                <Label Content="Signal Name" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+            </Grid>
+
+            <Grid Grid.Row="0" Grid.Column="1">
+                <TextBox Name="EntityNameTB" Grid.Row="0" Grid.Column="2" Margin="60,15,250,15" Background="WhiteSmoke"
+                         Text="{Binding Path=SigEntityNameTxt}"/>
+            </Grid>
+            
+            <!---->
+            <Grid Grid.Row="1" Grid.Column="0">
+                <Label Content="Bus" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+            </Grid>
+
+            <Grid Grid.Row="1" Grid.Column="1">
+                <CheckBox Name ="Bus_CB" HorizontalAlignment="Left" VerticalAlignment="Center"  Margin="60,5" Checked="Bus_CB_Checked" Unchecked="Bus_CB_Unchecked"
+                          IsChecked="{Binding Path=SigBusCB}"/>
+            </Grid>
+
+            <!---->
+            <Grid Grid.Row="2" Grid.Column="0">
+                <Label Content="MSB" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+            </Grid>
+
+            <Grid Grid.Column="1" Grid.Row="2">
+                <TextBox Name ="MSB_TB" Grid.Row="0" Grid.Column="2" Margin="60,15,250,15" Background="WhiteSmoke" PreviewTextInput="MSB_TB_PreviewTextInput"
+                         Text="{Binding Path=MsbTxt}"/>
+            </Grid>
+
+            <!---->
+            <Grid Grid.Row="3" Grid.Column="0">
+                <Label Content="LSB" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+            </Grid>
+
+            <Grid Grid.Row="3" Grid.Column="1">
+                <TextBox Name="LSB_TB" Grid.Row="0" Grid.Column="2" Margin="60,15,250,15" Background="WhiteSmoke" PreviewTextInput="LSB_TB_PreviewTextInput"
+                         Text="{Binding Path=LsbTxt}"/>
             </Grid>
 
         </Grid>
