--- a/VHDLGenerator/Templates/DataPathTemplate.tt
+++ b/VHDLGenerator/Templates/DataPathTemplate.tt
@@ -49,5 +49,13 @@ end component;
 begin
 
 PortMapping.....
+<#
+    foreach(ComponentModel component in Components)
+    {
+#>
+cop 
+<#
+    }
+ #>
 
 end <#=ArchName#>;
