--- a/VHDLGenerator/Views/Window_Datapath.xaml
+++ b/VHDLGenerator/Views/Window_Datapath.xaml
@@ -57,7 +57,8 @@
                 Grid.Column="2"
                 Margin="60,15,250,15"
                 Background="WhiteSmoke"
-                Text="{Binding Path=EntityNameTxt}"
+                Text="{Binding Path=EntityNameTxt , ValidatesOnDataErrors=True ,UpdateSourceTrigger=PropertyChanged}"
+                ToolTip="{Binding Path=ErrorCollection[EntityNameTxt]}"
             />
 
             <TextBox
@@ -98,7 +99,8 @@
                        Name="PortName_TB"
                        Width="200"
                        Margin="30,5"
-                       Text="{Binding Path=PortNameTxt}"
+                       Text="{Binding Path=PortNameTxt , ValidatesOnDataErrors=True ,UpdateSourceTrigger=PropertyChanged}"
+                       ToolTip="{Binding Path=ErrorCollection[PortName_TB]}"
                     />
                 </StackPanel>
 
@@ -111,8 +113,9 @@
                     />
                     
                     <ComboBox Name="Direction_CB" Width="100" Margin="30,5" 
-                              SelectedValue="{Binding Path=DirectionSel}"
+                              SelectedValue="{Binding Path=DirectionSel , ValidatesOnDataErrors=True ,UpdateSourceTrigger=PropertyChanged}"
                               ItemsSource="{Binding Path=GetDirections}"
+                              ToolTip="{Binding Path=ErrorCollection[Direction_CB]}"
                     />
                 </StackPanel>
 
@@ -126,7 +129,7 @@
                     <CheckBox
                         Name="Bus_CB" 
                         Margin="30,5"
-                        IsChecked="{Binding Path=BusSel}"
+                        IsChecked="{Binding Path=BusSel }"
                     />
                 </StackPanel>
 
@@ -141,7 +144,9 @@
                        Name="MSB_TB"
                        Width="55"
                        Margin="30,5"
-                       Text="{Binding Path=MsbTxt}"
+                       Text="{Binding Path=MsbTxt , ValidatesOnDataErrors=True ,UpdateSourceTrigger=PropertyChanged}"
+                       ToolTip="{Binding Path=ErrorCollection[MSB_TB]}"
+                       IsEnabled="{Binding Path=BitsEnable}"
                     />
                 </StackPanel>
 
@@ -156,7 +161,9 @@
                        Name="LSB_TB"
                        Width="55"
                        Margin="30,5"
-                       Text="{Binding Path=LsbTxt}"
+                       Text="{Binding Path=LsbTxt , ValidatesOnDataErrors=True ,UpdateSourceTrigger=PropertyChanged}"
+                       ToolTip="{Binding Path=ErrorCollection[LSB_TB]}"
+                        IsEnabled="{Binding Path=BitsEnable}"
                     />
                 </StackPanel>
 
@@ -211,6 +218,8 @@
                 Content="Finish"
                 Margin="670,10,55,22"
                 Click="Finish_Click"
+                IsEnabled="{Binding Path=FinishEnable}"
+                
             />
         </Grid>
 
