finish button enable logic added

--- a/VHDLGenerator/Views/Window_Datapath.xaml
+++ b/VHDLGenerator/Views/Window_Datapath.xaml
@@ -173,6 +173,7 @@
                     Height="20"
                     Content="Add Port"
                     Click="AddPort_Click"
+                    IsEnabled="{Binding Path=AddPortEnable}"
                 />
 
             </StackPanel>
