sigh sorta works need alot of fixing but it dynamically shows something

--- a/VHDLGenerator/Views/MainWindow.xaml
+++ b/VHDLGenerator/Views/MainWindow.xaml
@@ -113,10 +113,12 @@
 
                     <TreeView Name="CustomTreeView">
                         <TreeView.ItemTemplate>
-                            <HierarchicalDataTemplate ItemsSource="{Binding DataPath}">
-                                <TextBlock Text="{Binding Name}"/>
+                            <HierarchicalDataTemplate ItemsSource="{Binding Items}">
+                                <TextBlock Text="{Binding Title}" />
                             </HierarchicalDataTemplate>
+                            
                         </TreeView.ItemTemplate>
+                        
                     </TreeView>
 
                 </StackPanel>
